<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/border_background"
    android:elevation="5dp"
    android:layout_margin="5dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/border_background"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/products_image"/>

    <RelativeLayout
        android:id="@+id/pdContainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/image"
        android:padding="5dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:ellipsize="end"
            android:text="@string/product_description"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_below="@+id/description"
            android:layout_marginTop="10dp"
            android:text="@string/product_price"
            android:textSize="12sp"
            android:fontFamily="monospace"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/pdContainer">

        <ImageButton
            android:id="@+id/add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_baseline_add_24"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:id="@+id/remove"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_baseline_horizontal_rule_24"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/multiply"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:text="@string/multiplier"
            android:gravity="center"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/finalPrice"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/final_price"
        android:gravity="center"
        android:textSize="15sp"
        android:fontFamily="monospace"
        android:textColor="@color/colorAccent"/>


</RelativeLayout>