<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_margin="10dp"
    android:elevation="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_background">

    <ImageView
        android:id="@+id/image"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp"
        android:contentDescription="@string/products_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/image"
        android:id="@+id/descriptionContainer"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/product_description"
            android:id="@+id/description"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorAccent"
            android:text="@string/product_price"/>

        <ImageButton
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_baseline_shopping_cart_24"/>
    </RelativeLayout>
</RelativeLayout>